--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.1",
     "classnames": "^2.3.1",
     "next": "latest",
+    "next-sanity": "^0.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
